@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Adjust alchemy success chance to not depend on the ingredients,
+but only the recipe difficulty as defined in lib/formulae and the skill.
+Nicolas Weeger 2010-11-07
+
 Adjust alchemy danger computation: remove name length, but take into
 account weight and cursed or damned item status.
 Nicolas Weeger 2010-11-07
